# Form2SDCTemplate

./: .gitignore  .markdown-link-check.json  .spellcheck.yml  .wordlist.txt  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Form2SDCTemplate.md  README.md  SECURITY.md  VALIDATOR_SPECIFICATION.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: documentation.yml  publish.yml  stale.yml  test.yml
form2sdc/: Form2SDCTemplate.md  __init__.py  analyzer.py  core.py  prompt_loader.py  template_builder.py  types.py  validator.py
notebooks/: form_to_template.ipynb
tests/: conftest.py  test_template_builder.py  test_types.py  test_validator.py
